--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <img class="personajes-item" src="./images/chompi-white.jpeg" alt="Chómpiras">
                 <img class="personajes-item" src="./images/chaparron-white.jpeg" alt="Chaparron Bonaparte">
                 <img class="personajes-item" src="./images/dr-chapaint-white.jpeg" alt="Doctor Chapatín">
+                <img class="personajes-item" src="./images/chespi-gorro.jpeg" alt="Doctor Chapatín">
+                <img class="personajes-item" src="./images/chanfle.jpeg" alt="Doctor Chapatín">
             </div>
         </section>
 
